# rust-fullstack-todolist

./: .env.example  Cargo.toml  README.md  deploy.sh
backend/: Cargo.toml
backend/src/: error.rs  handler.rs  main.rs
backend/src/cron/: mod.rs
backend/src/db/: mod.rs  todo.rs
deploy/: run-backend.sh  run-frontend.sh  run.sh
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs
frontend/src/todo/: create.rs  delete.rs  list.rs  update.rs
model/: Cargo.toml
model/src/: lib.rs
